# strato

./: Cargo.toml
client/: Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/: main.rs
client/tmp/: index.css
core/: Cargo.toml
core/src/: card.rs  game.rs  lib.rs  player.rs
core/tests/: integration.rs
server/src/: main.rs
strato/: Cargo.toml
strato-client/: Cargo.toml  package.json
strato-client/src/: main.rs
strato-client/tmp/: index.css
strato-core/: Cargo.toml
strato-core/src/: game.rs  player.rs
strato-core/tests/: integration.rs
strato-server/: Cargo.toml
strato/src/: card.rs  event.rs  game.rs  lib.rs  player.rs  selector.rs  subscription.rs
strato/tests/: full-game.rs  integration.rs
